package NAlice;

// Top level field definitions for div cards

option go_package = "a.yandex-team.ru/alice/megamind/protos/div";
option java_package = "ru.yandex.alice.megamind.protos.div";
option java_outer_classname = "CardProto";

import "alice/library/censor/protos/extension.proto";

message TCardState {
    message TBlock {
        message TAction {
            optional string Url = 1 [json_name = "url", (FieldAccess) = A_PRIVATE_RESPONSE];
            optional string LogId = 2 [json_name = "log_id"];
        }

        message TSideElement {
            message TElement {
                option (MessageAccess) = A_PRIVATE_RESPONSE;

                // optional int32 Ratio = 1 [json_name = "ratio"];
                optional string ImageUrl = 2 [json_name = "image_url"];
                optional string Type = 3 [json_name = "type"];
                optional float Ratio = 4 [json_name = "ratio"];
            }

            optional string Position = 1 [json_name = "position"];
            optional string Size = 2 [json_name = "size", (FieldAccess) = A_PRIVATE_RESPONSE];
            optional TElement Element = 3 [json_name = "element"];
        }

        optional TAction Action = 1 [json_name = "action"];
        optional int32 HasDelimiter = 2 [json_name = "has_delimiter", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional TSideElement SideElement = 3 [json_name = "side_element", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string Size = 4 [json_name = "size", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string Text = 5 [json_name = "text", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional int32 TextMaxLines = 6 [json_name = "text_max_lines", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string Title = 7 [json_name = "title", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional int32 TitleMaxLines = 8 [json_name = "title_max_lines", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string Type = 9 [json_name = "type", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string TitleStyle = 10 [json_name = "title_style", (FieldAccess) = A_PRIVATE_RESPONSE];
        optional string TextStyle = 11 [json_name = "text_style", (FieldAccess) = A_PRIVATE_RESPONSE];
    }

    repeated TBlock Blocks = 1 [json_name = "blocks"];
    optional int32 StateId = 2 [json_name = "state_id"];
}

message TBackground {
    optional string Color = 1 [json_name = "color"];
    optional string Type = 2 [json_name = "type"];
}
